--- a/03week/guiPigLatin_2.css
+++ b/03week/guiPigLatin_2.css
@@ -1,37 +1,35 @@
 body {
   margin: 0 auto;
-  min-height: 760px;
+  min-height: 100%;
   background: #000;
-  mix-blend-mode: color #000;
-  background-repeat: no-repeat;
-  background-position: fixed;
-  background-size: cover;
-  padding-bottom: 10px;
+  /* background-position: fixed; */
+  /* padding-top: 10px; */
+  /* padding-bottom: 10px; */
 }
 
 #myVideo {
+  margin: 0px auto;
   position: fixed;
+  padding-top: 130px;
   right: 0;
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
 }
 
-/* Add some content at the bottom of the video/page */
+/* Add content over video */
 .content {
   position: fixed;
   bottom: 0;
   /* background: rgba(0, 0, 0, 0.5); */
   /* color: #f1f1f1; */
   width: 100%;
-  height: 720px;
+  height: 100%;
   padding: 0px;
 }
 
 header {
   margin: 0 auto;
-  /* padding-left: 150px; */
-  /* padding-top: 10px; */
   height: 207px;
   text-align: center;
   color: rgba(240, 241, 240, 0.829);
@@ -42,11 +40,13 @@ header {
 }
 
 h1 {
-  margin-left: 795px;
+  /* margin-left: 795px; */
   color: rgba(240, 241, 240, 0.829);
+  text-align: right;
+  padding-right: 100px;
   font-size: 20px;
   padding-top: 20px;
-  padding-left: 150px;
+  /* padding-left: 150px; */
   /* font-family: "Courier New", Courier, monospace; */
   font-weight: lighter;
   letter-spacing: 1px;
@@ -54,11 +54,13 @@ h1 {
 
 #translation {
   padding-top: 20px;
+  padding-right: 256px;
   color: rgba(240, 241, 240, 0.829);
 }
 
 button {
-  margin-left: 945px;
+  margin-left: 1077px;
+  /* text-align: right; */
   color: rgba(240, 241, 240, 0.829);
   /* color: rgba(94, 85, 126, 0.781); */
   font-size: 20px;
@@ -70,17 +72,18 @@ button {
   border-right-color: rgba(240, 241, 240, 0.829);
   border-bottom-color: rgba(240, 241, 240, 0.829);
   /* border-left-width: 1.5px;
-    border-right-width: 1.5px;
-    border-right-width: 2px;
-    border-bottom-width: 2px; */
+  border-right-width: 1.5px;
+  border-right-width: 2px;
+  border-bottom-width: 2px; */
   border-width: 1.25px;
   /* border-color: rgba(94, 85, 126, 0.897); */
   border-radius: 3%;
 }
 
 span {
-  margin-left: 950px;
+  margin-left: 1077px;
   /* color: rgba(71, 173, 68, 0.829); */
+  /* text-align: right; */
   color: rgb(0, 0, 0);
   font-size: 80px;
   background-color: transparent;
