--- a/07week/addressBook/addressBook.css
+++ b/07week/addressBook/addressBook.css
@@ -39,13 +39,12 @@ img {
   border-radius: 50%;
 }
 
-.thumbnail {
+/* .thumbnail {
   max-height: 60px;
   border-radius: 50%;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   border-color: black;
-  border-width: 15px;
-}
+} */
 
 .profilePic {
   margin-top: 10px;
